hard-gists/1342497/run.log
=== Docker Run Log for 1342497 ===
Started at: Mi 29. Okt 12:07:44 CET 2025

[2025-10-29 12:07:44] START: Running container for 1342497
[2025-10-29 12:07:45] SUCCESS: Container d84d95273417aa7ea757798933dba83fda85dd7e860490daa23ee379c8d0a383 started for 1342497
=== Container logs for 1342497 ===
  File "/snippet.py", line 23
    print 'Usage: %s <audio file.wav>' %sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1342497 ===
[2025-10-29 12:07:47] INFO: Container d84d95273417aa7ea757798933dba83fda85dd7e860490daa23ee379c8d0a383 has stopped
